# affinity-vae

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  avae_final_config14_09_03_08_2023.yaml  avae_final_config17_04_03_08_2023.yaml  pyproject.toml  requirements.txt  run.py  run_create_subtomo.py  setup.cfg
.github/workflows/: checks.yml  tests.yml
affinivae/: config.py  data.py  evaluate.py  loss.py  model.py  model_b.py  run.py  train.py  utils.py  vis.py
avae/: base.py  config.py  cyc_annealing.py  data.py  decoders.py  device_util.py  encoders.py  evaluate.py  loss.py  model.py  model_a.py  model_b.py  models.py  napari.py  settings.py  train.py  utils.py  utils_learning.py  vis.py
avae/decoders/: base.py  decoders.py  differentiable.py  spatial.py
avae/encoders/: base.py  encoders.py
avae_env/: pyvenv.cfg
configs/: avae-create_subtomo_test_config.yml  avae-test-config.yml
omics/: omics_saver.py
scripts/: README.md  data.testing.py  run_create_subtomo.py  run_napari_model_view.py
tests/: test_config.py  test_data.py  test_early_stopping.py  test_loss.py  test_model.py  test_train_eval_pipeline.py  test_utils.py  test_vis.py
tests/testdata/: 1b23_12-78-36.mrcs  1dfo_50-101-13.mrcs  1dfo_50-188-93.mrcs  1dfo_50-98-117.mrcs  1dkg_71-5-304.mrcs  1e3p_165-45-181.mrcs
tests/testdata/test/: 1fcj_12-315-152.mrcs  1fcj_14-179-232.mrcs  1u22_19-28-86.mrcs  1u22_20-234-11.mrcs
tests/testdata_mrc/: 1b23_12-321-215.mrcs  1b23_17-12-216.mrcs  1b23_17-122-253.mrcs  1b23_18-6-203.mrcs  1b23_19-63-199.mrcs  1b23_3-143-280-2.mrcs  1dfo_10-119-219.mrcs  1dfo_11-314-163.mrcs  1dfo_14-53-194.mrcs  1dfo_39-131-304.mrcs  1dkg_48-309-129.mrcs  1dkg_54-251-337.mrcs  1dkg_61-295-21.mrcs  1dkg_66-55-313.mrcs  1dkg_70-345-201.mrcs  1e3p_154-148-97.mrcs  1e3p_158-30-224.mrcs  1e3p_175-257-94.mrcs  1e3p_180-68-53.mrcs  1e3p_194-99-344.mrcs  1e3p_200-14-187.mrcs  affinity_fsc_10.csv  classes.csv
tests/testdata_mrc/test/: 1dkg_39-193-315.mrcs  1fcj_3-312-192.mrcs  1fcj_36-356-203.mrcs  1fcj_44-141-202.mrcs  1fcj_47-208-183.mrcs  1fcj_61-226-58.mrcs  1u22_18-34-195.mrcs  1u22_2-252-51.mrcs  1u22_3-333-222.mrcs  1u22_7-151-203.mrcs  1u22_8-0-98.mrcs
tests/testdata_npy/: 2_0_img.npy  2_1_img.npy  2_2_img.npy  2_3_img.npy  2_4_img.npy  2_5_img.npy  2_6_img.npy  2_8_img.npy  2_9_img.npy  5_0_img.npy  5_10_img.npy  5_1_img.npy  5_2_img.npy  5_3_img.npy  5_4_img.npy  5_5_img.npy  5_6_img.npy  5_7_img.npy  5_9_img.npy  a_0_img.npy  a_1_img.npy  a_2_img.npy  a_3_img.npy  a_4_img.npy  a_5_img.npy  a_6_img.npy  a_7_img.npy  a_8_img.npy  affinity_an.csv  classes.csv  d_0_img.npy  d_1_img.npy  d_2_img.npy  d_3_img.npy  d_4_img.npy  d_5_img.npy  d_6_img.npy  d_7_img.npy  d_9_img.npy  e_0_img.npy  (+74 more)
tests/testdata_npy/test/: 2_7_img.npy  a_9_img.npy  d_10_img.npy  i_0_img.npy  s_7_img.npy  u_6_img.npy  v_4_img.npy  x_1_img.npy
tools/: augment_mrcs.py  create_scheduling_func.ipynb  create_subtomo.py  gamma_array.npy  plotting_post_process.ipynb  slurm_run.sh
tutorials/: README.md  mnist_saver.py
tutorials/mnist_data/: affinity_mnist.csv  mnist_config.yml
